fixed spacing, complete done page w/ variables

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,11 @@ text-align: center
   text-align: center;
 }
 
+.section{
+  padding-top: 0px;
+  padding-bottom: 0px
+}
 #startButton{
 padding-top: 100px;
 }
+
